# talowe-rv1126b-aidemo

./: README.md
talowe_fire_detection_cam/cpp/: CMakeLists.txt  build-linux.sh  main.cc  postprocess.cc  postprocess.h
talowe_fire_detection_cam/cpp/install/rv1126b_linux_aarch64/rknn_fire_detection_cam/: rknn_fire_detection_cam
talowe_fire_detection_cam/cpp/install/rv1126b_linux_aarch64/rknn_yolo11_detection_cam/: rknn_yolo11_detection_cam
talowe_helmet_detection_cam/cpp/: CMakeLists.txt  build-linux.sh  main.cc  postprocess.h
talowe_helmet_detection_cam/cpp/install/rv1126b_linux_aarch64/rknn_helmet_detection_cam/: rknn_helmet_detection_cam
talowe_helmet_detection_cam/cpp/utils/: image_utils.c
talowe_ppocr_cam/cpp/: CMakeLists.txt  build-linux.sh  main.cc
talowe_ppocr_cam/cpp/install/rv1126b_linux_aarch64/rknn_ppocr_demo/: rknn_ppocr_cam
talowe_ppocr_cam/model/: ppocrv4_det.rknn
talowe_retinaface_cam/cpp/: CMakeLists.txt  build-linux.sh  main.cc
talowe_retinaface_cam/cpp/install/rv1126b_linux_aarch64/rknn_retinaface_cam/: rknn_retinaface_demo
talowe_retinaface_cam/cpp/rknpu1/: retinaface.cc
talowe_retinaface_cam/cpp/rknpu2/: retinaface.cc
talowe_yolo11_detection_cam/cpp/: CMakeLists.txt  build-linux.sh  main.cc
talowe_yolo26_detection_cam/cpp/: CMakeLists.txt  build-linux.sh  main.cc
talowe_yolo26_detection_cam/cpp/install/rv1126b_linux_aarch64/rknn_yolo26_detection_cam/: rknn_yolo26_detection_cam
talowe_yolov5_detection_cam/cpp/: CMakeLists.txt  build-linux.sh  main.cc
talowe_yolov5_detection_cam/cpp/install/rv1126b_linux_aarch64/rknn_yolov5_cam/: rknn_yolov5_cam
talowe_yolov5_detection_cam/cpp/install/rv1126b_linux_aarch64/rknn_yolov5_detection_cam/: rknn_yolov5_detection_cam
talowe_yolov5_detection_cam/cpp/utils/: image_utils.c
talowe_yolov5_seg_cam/cpp/: CMakeLists.txt  build-linux.sh  main.cc
talowe_yolov5_seg_cam/cpp/install/rv1126b_linux_aarch64/rknn_yolov5_seg_cam/: rknn_yolov5_seg_cam
talowe_yolov5_seg_cam/cpp/rknpu2/: postprocess.cc  timer.h
talowe_yolov8_garbage_sort_cam/cpp/: CMakeLists.txt  main.cc  postprocess.cc  yolov8.h
talowe_yolov8_garbage_sort_cam/cpp/install/rv1126b_linux_aarch64/rknn_yolov8_garbage_sort_cam/: rknn_yolov8_garbage_sort_cam
talowe_yolov8_pose_cam/cpp/: CMakeLists.txt  build-linux.sh  main.cc
(+5 files in other folders)
